style.css
/* import fonts */
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* document reset styles */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Base styles */
body{
    font-family: "Fira Sans", serif;
    background-color: #F5F5F5;
    height: 1000px;
}

/* Global Styles */
.boxed-container{
    max-width: 1280px;
}
.p-flex{
    display: flex;
}
.flex-col{
    flex-direction: column;
}
.flex-row-reversed{
    flex-direction: row-reverse;
}
.flex-center-x{
    justify-content: center;
}
.flex-center-y{
    align-items: center;
}
.flex-center{
    justify-content: center;
    align-items: center;
}
.flex-gap{
    gap: 24px;
}

/* utility class */

.primary-text{
    color: #0d0d0db3;
    font-size: 16px;
    font-weight: 400;
    line-height: 1.5;
}
.secondary-title{
    font-size: 40px;
    font-weight: 700;
    margin-bottom: 24px;
    
}
.sub-title{
    color: #0e0e0ecc;
    font-size: 20px;
    font-weight: 700;
}
.btn-primary{
    color: #ffffff;
    font-size: 18px;
    font-weight: 600;
    background-color: #006A50;
    padding: 17px 35px;
    text-decoration: none;
    border-radius: 8px;
    display: inline-block;
    transition: all .5s ease-in-out;
}
.btn-primary:hover{
    color: #0E0E0E;
    background-color: #5AE862;
    cursor: pointer;
}
.other-title{
    color: #0E0E0E;
    font-size: 16px;
    font-weight: 600;
}
.box-title{
    color: #0e0e0ecc;
    font-size: 32px;
    font-weight: 700;
}

/* hero Section Styles */
.hero-container{
    background-color: #C6E4D6;
    padding: 80px 60px;
    border-radius: 24px;
}
.hero-text-container{
    flex: 1;
}
.hero-sub-title{
    color: #0d0d0d80;
    font-size: 24px;
    font-weight: 500;
    margin-bottom: 16px;
}
.hero-title{
    color: #0E0E0E;
    font-size: 56px;
    font-weight: 700;
    margin-bottom: 24px;
}
.hero-img{
    width: 100%;
}
/* Pillars Styles */
#pillar-section{
    margin: 80px 0;
}
.pillar-box-container{
    align-items: stretch;
}
.pillar-title{
    color: #0E0E0E;
    margin-bottom: 32px;
}
.box{
    padding: 24px;
    background-color: #ffffff;
    border: 1px solid #0d0d0d26;
    border-radius: 16px;
    flex: 1;
}
.box-text{
    color: #0d0d0db3;
}
/* Vision of future Styles */
.vision-text-container{
    margin-bottom: 32px;
}
.vision-card-container{
    align-items: stretch;
}
.card{
    padding: 32px;
    border-radius: 16px;
    justify-content: space-between;
    align-items: flex-start;
    flex: 1;
}
.card-content{
    align-items: flex-start;
}
.card .card-title{
    margin-top: 25px;
    margin-bottom: 15px;
}

.card-1{
    background-color: #5691f533;
    border: 1px solid #5490F5;
}
.card-2{
    background-color: #C6E4D6;
    border: 1px solid #09A15C;
}
.card-3{
    background-color: #F7EBCF;
    border: 1px solid #FFC239;
}
.card-btn{
    color: #ffffff;
    text-decoration: none;
    padding: 11px 20px;
    border-radius: 8px;
    transition: all .5s ease-in-out;
}
.card-btn-1{
    background-color: #5490F5;
    border: 1px solid #5490F5;
}
.card-btn-2{
    background-color: #09A15C;
    border: 1px solid #09A15C;
}
.card-btn-3{
    background-color: #FFC239;
    border: 1px solid #FFC239;
}
.card-btn:hover{
    background-color: transparent;
    color: #0E0E0E;
    cursor: pointer;
}

